kubernetes-manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: quiz-app
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  ingressClassName: nginx
  rules:
  - host: quizapp.devopsogo.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: backend-svc
            port:
              number: 8080
      - pathType: Prefix
        path: /
        backend:
          service:
            name: frontend-svc
            port:
              number: 80
